--- a/Login.ui
+++ b/Login.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Log_in</class>
+ <widget class="QWidget" name="Log_in">
   <property name="geometry">
    <rect>
     <x>0</x>
