--- a/user_menu.ui
+++ b/user_menu.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>User_menu</class>
+ <widget class="QWidget" name="User_menu">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>667</width>
-    <height>504</height>
+    <width>847</width>
+    <height>830</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,134 +60,219 @@
     <string>退出登录</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="button_reset_password">
+  <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>350</y>
-     <width>81</width>
-     <height>24</height>
+     <x>40</x>
+     <y>60</y>
+     <width>521</width>
+     <height>381</height>
     </rect>
    </property>
-   <property name="text">
-    <string>重置密码</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="button_feedback">
-   <property name="geometry">
-    <rect>
-     <x>430</x>
-     <y>390</y>
-     <width>81</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>我要反馈</string>
-   </property>
-  </widget>
-  <widget class="QWidget" name="">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>80</y>
-     <width>345</width>
-     <height>345</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <property name="leftMargin">
-     <number>10</number>
-    </property>
-    <property name="topMargin">
-     <number>10</number>
-    </property>
-    <property name="rightMargin">
-     <number>10</number>
-    </property>
-    <property name="bottomMargin">
-     <number>10</number>
-    </property>
-    <property name="spacing">
-     <number>75</number>
-    </property>
-    <item row="0" column="0">
-     <widget class="QPushButton" name="button_borrow">
-      <property name="minimumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
+   <widget class="QWidget" name="page_main_menu">
+    <widget class="QPushButton" name="button_feedback">
+     <property name="geometry">
+      <rect>
+       <x>360</x>
+       <y>320</y>
+       <width>81</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>我要反馈</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="layoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>10</y>
+       <width>345</width>
+       <height>345</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <property name="leftMargin">
+       <number>10</number>
       </property>
-      <property name="maximumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
+      <property name="topMargin">
+       <number>10</number>
       </property>
-      <property name="text">
-       <string>借书</string>
+      <property name="rightMargin">
+       <number>10</number>
       </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QPushButton" name="button_return">
-      <property name="minimumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
+      <property name="bottomMargin">
+       <number>10</number>
       </property>
-      <property name="maximumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
+      <property name="spacing">
+       <number>75</number>
       </property>
-      <property name="text">
-       <string>还书</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="button_serch">
-      <property name="minimumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>查询</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="button_history">
-      <property name="minimumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
-      </property>
-      <property name="maximumSize">
-       <size>
-        <width>125</width>
-        <height>125</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>借阅历史</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
+      <item row="0" column="0">
+       <widget class="QPushButton" name="button_borrow">
+        <property name="minimumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>借书</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="button_return">
+        <property name="minimumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>还书</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="button_serch">
+        <property name="minimumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>查询</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="button_history">
+        <property name="minimumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>125</width>
+          <height>125</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>借阅历史</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QPushButton" name="button_reset_password">
+     <property name="geometry">
+      <rect>
+       <x>360</x>
+       <y>280</y>
+       <width>81</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>重置密码</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="page_borrow">
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>200</y>
+       <width>181</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>200</y>
+       <width>131</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>请输入书籍唯一索引码</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>50</y>
+       <width>121</width>
+       <height>131</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>24</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>logo</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QWidget" name="widget" native="true">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>250</y>
+       <width>341</width>
+       <height>72</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>借书</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="text">
+         <string>退出</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="page"/>
   </widget>
  </widget>
  <resources/>
