--- a/user_menu.ui
+++ b/user_menu.ui
@@ -201,7 +201,7 @@
     </widget>
    </widget>
    <widget class="QWidget" name="page_borrow">
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="borrow_line_edit">
      <property name="geometry">
       <rect>
        <x>240</x>
@@ -211,7 +211,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="borrow_hint">
      <property name="geometry">
       <rect>
        <x>100</x>
@@ -224,7 +224,7 @@
       <string>请输入书籍唯一索引码</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="borrow_main_LOGO">
      <property name="geometry">
       <rect>
        <x>190</x>
@@ -256,14 +256,14 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="borrow_borrow_button">
         <property name="text">
          <string>借书</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="borrow_quit_button">
         <property name="text">
          <string>退出</string>
         </property>
