--- a/Login.ui
+++ b/Login.ui
@@ -144,6 +144,13 @@
      </layout>
     </item>
     <item>
+     <widget class="QCheckBox" name="manager_check">
+      <property name="text">
+       <string>我是管理员</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="pushButton_login">
