除添加图书信息的页面全部完成、完成了用户功能的逻辑调用。

--- a/Login.ui
+++ b/Login.ui
@@ -183,6 +183,32 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="register_button">
+   <property name="geometry">
+    <rect>
+     <x>380</x>
+     <y>220</y>
+     <width>81</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>注册</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>230</x>
+     <y>220</y>
+     <width>161</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>没有账号？先去注册一个吧</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
