--- a/register.ui
+++ b/register.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Register</class>
+ <widget class="QWidget" name="Register">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>LOGO</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -36,7 +36,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>姓名</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -49,7 +49,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>密码</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -62,7 +62,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>身份证号</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -75,10 +75,10 @@
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>电话号码</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="name_line">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -88,7 +88,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="pass_line">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -98,7 +98,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_3">
+  <widget class="QLineEdit" name="id_line">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -108,7 +108,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_4">
+  <widget class="QLineEdit" name="telenum_line">
    <property name="geometry">
     <rect>
      <x>410</x>
@@ -118,7 +118,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="register_2">
+  <widget class="QPushButton" name="button_register">
    <property name="geometry">
     <rect>
      <x>330</x>
@@ -131,7 +131,7 @@
     <string>注册</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="quit">
+  <widget class="QPushButton" name="quit_button">
    <property name="geometry">
     <rect>
      <x>440</x>
@@ -142,6 +142,19 @@
    </property>
    <property name="text">
     <string>返回</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBox_manager">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>250</y>
+     <width>80</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>我是管理员</string>
    </property>
   </widget>
  </widget>
