--- a/user_menu.ui
+++ b/user_menu.ui
@@ -65,12 +65,12 @@
     <rect>
      <x>20</x>
      <y>60</y>
-     <width>521</width>
+     <width>541</width>
      <height>381</height>
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>3</number>
    </property>
    <widget class="QWidget" name="page_main_menu">
     <widget class="QPushButton" name="button_feedback">
@@ -392,12 +392,37 @@
     <widget class="QTableWidget" name="serch_table">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>30</x>
        <y>60</y>
-       <width>401</width>
+       <width>511</width>
        <height>231</height>
       </rect>
      </property>
+     <column>
+      <property name="text">
+       <string>书名</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>作者</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>ISBN</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>是否在馆</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>书籍索引码</string>
+      </property>
+     </column>
     </widget>
     <widget class="QPushButton" name="serch_quit">
      <property name="geometry">
