--- a/user_menu.ui
+++ b/user_menu.ui
@@ -70,7 +70,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>3</number>
+    <number>4</number>
    </property>
    <widget class="QWidget" name="page_main_menu">
     <widget class="QPushButton" name="button_feedback">
@@ -448,6 +448,21 @@
        <height>231</height>
       </rect>
      </property>
+     <column>
+      <property name="text">
+       <string>新建列</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>书籍编码</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>还书日期</string>
+      </property>
+     </column>
     </widget>
     <widget class="QLabel" name="history_lable">
      <property name="geometry">
