--- a/user_menu.ui
+++ b/user_menu.ui
@@ -41,7 +41,7 @@
     </font>
    </property>
    <property name="text">
-    <string>欢迎，XXX</string>
+    <string>欢迎</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -70,7 +70,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>7</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="page_main_menu">
     <widget class="QWidget" name="layoutWidget">
@@ -286,9 +286,9 @@
     <widget class="QLineEdit" name="return_line_edit">
      <property name="geometry">
       <rect>
-       <x>240</x>
-       <y>120</y>
-       <width>113</width>
+       <x>250</x>
+       <y>150</y>
+       <width>161</width>
        <height>23</height>
       </rect>
      </property>
@@ -296,34 +296,39 @@
     <widget class="QLabel" name="return_hint">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>120</y>
-       <width>54</width>
-       <height>16</height>
+       <x>90</x>
+       <y>140</y>
+       <width>141</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>请输入书籍唯一识别码</string>
      </property>
     </widget>
     <widget class="QLabel" name="retur_LOGO">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>70</y>
-       <width>54</width>
-       <height>16</height>
+       <x>190</x>
+       <y>60</y>
+       <width>91</width>
+       <height>51</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <pointsize>24</pointsize>
+      </font>
+     </property>
      <property name="text">
-      <string>TextLabel</string>
+      <string>还书</string>
      </property>
     </widget>
     <widget class="QPushButton" name="return_return_button">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>180</y>
+       <x>100</x>
+       <y>240</y>
        <width>81</width>
        <height>24</height>
       </rect>
@@ -335,8 +340,8 @@
     <widget class="QPushButton" name="return_quit">
      <property name="geometry">
       <rect>
-       <x>300</x>
-       <y>180</y>
+       <x>260</x>
+       <y>240</y>
        <width>81</width>
        <height>24</height>
       </rect>
@@ -457,12 +462,12 @@
      </property>
      <column>
       <property name="text">
-       <string>新建列</string>
+       <string>书籍编码</string>
       </property>
      </column>
      <column>
       <property name="text">
-       <string>书籍编码</string>
+       <string>借书日期</string>
       </property>
      </column>
      <column>
@@ -512,78 +517,6 @@
     </widget>
    </widget>
    <widget class="QWidget" name="page_reset_password">
-    <widget class="QPushButton" name="reset_reset">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>250</y>
-       <width>81</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>确认重置</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="reset_quit">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>290</y>
-       <width>81</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>返回</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="reset_oldpass">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>140</y>
-       <width>113</width>
-       <height>23</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="reset_newpass">
-     <property name="geometry">
-      <rect>
-       <x>320</x>
-       <y>180</y>
-       <width>113</width>
-       <height>23</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>233</x>
-       <y>140</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>请输入原密码</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_2">
-     <property name="geometry">
-      <rect>
-       <x>233</x>
-       <y>180</y>
-       <width>71</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>请输入新密码</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
@@ -597,28 +530,73 @@
       <string>LOGO</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>230</x>
-       <y>210</y>
-       <width>71</width>
-       <height>20</height>
+       <x>160</x>
+       <y>140</y>
+       <width>256</width>
+       <height>83</height>
       </rect>
      </property>
-     <property name="text">
-      <string>请确认新密码</string>
-     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>请输入原密码</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="reset_oldpass"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>请输入新密码（6位数字）</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="reset_newpass"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>请确认新密码</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="reset_config_newpass"/>
+      </item>
+     </layout>
     </widget>
-    <widget class="QLineEdit" name="reset_config_newpass">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
-       <x>320</x>
-       <y>210</y>
-       <width>113</width>
-       <height>23</height>
+       <x>160</x>
+       <y>250</y>
+       <width>251</width>
+       <height>26</height>
       </rect>
      </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="reset_reset">
+        <property name="text">
+         <string>确认重置</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="reset_quit">
+        <property name="text">
+         <string>返回</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
    <widget class="QWidget" name="page_feedback">
